objects/copado__Release__c.object
<CustomObject>
    <fields>
        <fullName>CICD_Promote__c</fullName>
        <formula>IF(  CICD_Released__c , 
  IMAGE(&apos;/resource/CICD_Icons/PromoteIcon_InActive.png&apos;, &apos;Invalid Release for Promotion&apos; , 30 , 99),
  HYPERLINK( &apos;/c/CICD_Promotion.app?c__releaseid=&apos;+  Id , 
              IMAGE(&apos;/resource/CICD_Icons/PromoteIcon_Active.png&apos;, &apos;Click to Promote this Release&apos; , 30 , 99)  ,
             &apos;_blank&apos;) )</formula>
        <label>Promote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_RelatedProjects__c</fullName>
        <label>Related Projects</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>DEV</fullName>
                    <label>Devops</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CICD_ReleaseIds__c</fullName>
        <label>Release Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_Released__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the release has been deployed to Prod and is closed.</description>
        <inlineHelpText>Whether the release has been deployed to Prod and is closed.</inlineHelpText>
        <label>Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CICD_StartDate__c</fullName>
        <description>Start date of the Release</description>
        <inlineHelpText>Start date of the Release</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CICD_SyncRelease__c</fullName>
        <formula>IF( !CICD_Released__c , true ,  IF( TODAY() -  copado__Planned_Date__c &lt;= 7 , true ,false ) )</formula>
        <label>CICD Sync Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Base_Branch__c</fullName>
        <description>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</description>
        <inlineHelpText>All user story feature branches are created out of the main branch of the Deployment Flow. If a Release base branch is specified, all feature branches of user stories linked to the Release will be created out of the base branch.</inlineHelpText>
        <label>Base Branch</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <description>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</description>
        <inlineHelpText>When a Promotion linked to this Release is merged into the Main Branch of the deployment flow, Copado will tag the Main Branch with this version number. This value is typically a major (e.g. v7), minor (v7.3) or patch (v7.3.2) release.</inlineHelpText>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Base_Branch__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CICD_ReleaseNameFormatCheck</fullName>
        <active>true</active>
        <description>Release name format check</description>
        <errorConditionFormula>NOT(REGEX(Name, &apos;^SFDC 20[0-9]{2}-[0-9]{2}-[0-9]{2}.*&apos;))</errorConditionFormula>
        <errorMessage>The format of the Release Name must be &quot;SFDC &quot; + Release date formatted as YYYY-MM-DD.  If this a hotfix release then add &quot;Hotfix&quot; as a suffix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_ReleaseDate_Check</fullName>
        <active>true</active>
        <errorConditionFormula>CICD_StartDate__c &gt; copado__Planned_Date__c</errorConditionFormula>
        <errorDisplayField>CICD_StartDate__c</errorDisplayField>
        <errorMessage>Start Date can not be greater than release date</errorMessage>
    </validationRules>
</CustomObject>